@@ -1,0 +1,1 @@
+$B -rsim jpron.transducer vowel-separator.transducer         jpron-asciikana.transducer asciikana-katakana.transducer   < test.katakana
